# aptos-core

api/: Cargo.toml
api/doc/: spec.json  spec.yaml
api/src/: response.rs
aptos-move/aptos-vm/src/: aptos_vm.rs  transaction_arg_validation.rs
aptos-move/move-deps/: Cargo.toml
crates/aptos-build-info/src/: lib.rs
crates/aptos-rosetta/src/: construction.rs
crates/aptos-telemetry-service/src/: constants.rs  metrics.rs
crates/indexer/migrations/2022-09-29-073529_add_coin_tables/: up.sql
crates/indexer/src/: runtime.rs  schema.rs
crates/indexer/src/models/coin_models/: coin_activities.rs  coin_infos.rs  coin_utils.rs  mod.rs
crates/indexer/src/models/token_models/: ans_lookup.rs  mod.rs  tokens.rs
crates/indexer/src/processors/: coin_processor.rs  token_processor.rs
crates/transaction-emitter-lib/src/transaction_generator/: nft_mint_and_transfer.rs
dashboards/: storage-overview.json
network/netcore/src/transport/: tcp.rs
storage/backup/backup-cli/src/coordinators/: restore.rs
testsuite/forge-cli/src/: main.rs
