[package]
name = "move-deps"
version = "0.0.1"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
repository = "https://github.com/aptos-core/aptos-labs"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
##########################################################################################
# !!!!! WARNING !!!!!
#
#   To update the Move dependencies, you MUST perform a search and replace throughout
#   the whole repo. This is because we now have crates that directly depends on some Move
#   crates, to dodge feature unification issues. Please DO NOT make them use move-deps,
#   or you risk including testing only features in the production build.
#
#   The language team is aware of the poor user experience this created, and we are
#   actively looking for solutions.
#
##########################################################################################
move-abigen = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-binary-format = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-bytecode-utils = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-bytecode-verifier = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-cli = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-command-line-common = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-compiler = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-core-types = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-docgen = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-errmapgen = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-ir-compiler = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-model = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-package = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-prover = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-prover-boogie-backend = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-prover-test-utils = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-resource-viewer = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-stackless-bytecode-interpreter = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-stdlib = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-symbol-pool = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-table-extension = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-transactional-test-runner = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-unit-test = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-vm-runtime = { git = "https://github.com/move-language/move", features = ["lazy_natives"], rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-vm-test-utils = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
read-write-set = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }
read-write-set-dynamic = { git = "https://github.com/move-language/move", rev = "96933cae6fe1bc8145e9137e10b7612bddfba58c" }

[features]
default = []
address32 = ["move-core-types/address32"]
fuzzing = ["move-core-types/fuzzing", "move-binary-format/fuzzing", "move-vm-types/fuzzing"]
table-extension = ["move-unit-test/table-extension", "move-vm-test-utils/table-extension"]
testing = ["move-stdlib/testing", "move-vm-runtime/testing"]
failpoints = ["move-vm-runtime/failpoints"]
